create fitur checkout, add several fields in entity
