# model/api/transaction/transaction_create_request.go
@@ -1,0 +1,6 @@
+package transaction
+
+type TransactionCreateRequest struct {
+	UserId int     `validate:"required" json:"user_id"`
+	Amount float64 `validate:"required" json:"amount"`
+}
